--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
-*{
-margin: 0;
-padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
 
-:root{
-    --color-amarelo: FFCE22;
-    --color-azul: 054A91;
+:root {
+  --color-amarelo: FFCE22;
+  --color-azul: 054A91;
 }
-header {
-    width: 100%;
-    color: var(--color-amarelo);
-}
-
-footer{
-    
+header  {
+  width: 100%;
+  background-color: var(--color-amarelo);
 }
 
+footer {
+  background-color: aqua;
+}
