--- a/src/style.css
+++ b/src/style.css
@@ -3,18 +3,52 @@
 * {
     margin: 0;
     padding: 0;
+    font-size:medium;
+    margin: 1%;
 }
 
 :root {
-    --color-amarelo: FFCE22;
-    --color-azul: 054A91;
+    --color-amarelo: #FFCE22;
+    --color-azul: #054A91;
+    --background-gradient: linear-gradient(178deg, #ffce22 10%, #3333ff);
 }
 
-header {
+header, .conteúdoCabeçalho, .caixaTexto {
     width: 100%;
     background-color: var(--color-amarelo);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+select, #botaoLimpar {
+    color: #ffffff;
+    border: 3px solid #252525;
+    border-radius: 20px;
+    padding: 10px;
+    line-height: 100%;
+    margin: 10px;
+    margin-bottom: 1rem;
+    text-align: center;
+    background-color: var(--color-azul);
+    cursor: pointer;
+    transition: 0.3s;
+    box-shadow: 2px 2px var(--background-gradient);
+}
+
+#botaoLimpar:hover {
+    background-color: #5d86af;
+    box-shadow: #252525;
+}
+
+.cartaoUnitario {
+    color: #f8eca5;
+    border: 3px solid #252525;
+    border-radius: 20px;
+    padding: 5px;
 }
 
 footer {
-    background-color: aqua;
+    background-color:#f8eca5;
 }
+
