--- a/src/style.css
+++ b/src/style.css
@@ -1,44 +1,54 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
 * {
-    margin: 0;
+    /* margin: ; */
     padding: 0;
     font-size:medium;
-    margin: 1%;
+    color: #DECDC1;
+    background-color: #0e0613;
+    text-align: center;
 }
 
 :root {
-    --color-amarelo: #FFCE22;
-    --color-azul: #054A91;
-    --background-gradient: linear-gradient(178deg, #ffce22 10%, #3333ff);
+    --color-preto: #0e0613;
+    --color-laranja: #dd7930;
+    --color-marrom: #795025;
+    --color-lilas: #762697;
+    --color-branco: #DECDC1;
+    --color-roxo: #561d67;
 }
 
-header, .conteúdoCabeçalho, .caixaTexto {
+.imagemTopo {
+    background-size: contain;
+    max-height: 15%;
     width: 100%;
-    background-color: var(--color-amarelo);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+h1 {
+    padding: 2.5%;
+    background-color: var(--color-roxo);
+    justify-content:center;
+    
 }
 
 select, #botaoLimpar {
     color: #ffffff;
-    border: 3px solid #252525;
+    border: 3px solid var(--color-roxo);
     border-radius: 20px;
     padding: 10px;
     line-height: 100%;
     margin: 10px;
     margin-bottom: 1rem;
     text-align: center;
-    background-color: var(--color-azul);
+    background-color: var(--color-lilas);
     cursor: pointer;
     transition: 0.3s;
-    box-shadow: 2px 2px var(--background-gradient);
+    box-shadow: 2px 2px var(--color-preto)
 }
 
-#botaoLimpar:hover {
-    background-color: #5d86af;
-    box-shadow: #252525;
+select, #botaoLimpar:hover {
+    background-color: var(--color-roxo);
+    box-shadow: var(--color-preto);
 }
 
 .cartaoUnitario {
@@ -46,9 +56,8 @@ select, #botaoLimpar {
     border: 3px solid #252525;
     border-radius: 20px;
     padding: 5px;
+    text-align: center;
 }
 
-footer {
-    background-color:#f8eca5;
-}
+
 
