--- a/src/style.css
+++ b/src/style.css
@@ -51,12 +51,12 @@ select, #botaoLimpar:hover {
     box-shadow: var(--color-preto);
 }
 
-.cartaoUnitario {
-    color: #f8eca5;
+.listaCards {
     border: 3px solid #252525;
     border-radius: 20px;
     padding: 5px;
-    text-align: center;
+    text-align: right;
+    /* flex-wrap: wrap; */
 }
 
 
