--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,13 @@
     --color-roxo: #561d67;
 }
 
-.imagemTopo {
+img {
     background-size: contain;
     max-height: 15%;
     width: 100%;
 }
 
-h1 {
+header, footer {
     padding: 2.5%;
     background-color: var(--color-roxo);
     justify-content:center;
@@ -51,13 +51,20 @@ select, #botaoLimpar:hover {
     box-shadow: var(--color-preto);
 }
 
-.listaCards {
+ul {
+    flex-direction: row;
+    /* flex-wrap: wrap; */
+
+}
+
+.cardsUnitarios {
+    background-color: var(--color-roxo);
+    margin: 1rem;
     border: 3px solid #252525;
     border-radius: 20px;
     padding: 5px;
     text-align: right;
-    /* flex-wrap: wrap; */
-}
+    display: grid; 
 
-
-
+    flex-direction: column;
+} 
