alteração estilo e cores css e alteração divs

--- a/src/style.css
+++ b/src/style.css
@@ -1,90 +1,123 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
-
-* {
-    /* margin: ; */
-    padding: 0;
-    font-size:medium;
-    color: #DECDC1;
-    background-color: #0e0613;
-    text-align: center;
-}
-
-:root {
-    --color-preto: #0e0613;
-    --color-laranja: #dd7930;
-    --color-marrom: #795025;
-    --color-lilas: #762697;
-    --color-branco: #DECDC1;
-    --color-roxo: #561d67;
-}
-
-img {
-    background-size: contain;
-    max-height: 15%;
-    width: 100%;
-}
-
-header, footer {
-    padding: 2.5%;
-    background-color: var(--color-roxo);
-    justify-content:center;
-    
-}
-
-select, #botaoLimpar {
-    color: #ffffff;
-    border: 3px solid var(--color-roxo);
-    border-radius: 20px;
-    padding: 10px;
-    line-height: 100%;
-    margin: 10px;
-    margin-bottom: 1rem;
-    text-align: center;
-    background-color: var(--color-lilas);
-    cursor: pointer;
-    transition: 0.3s;
-    box-shadow: 2px 2px var(--color-preto)
-}
-
-select, #botaoLimpar:hover {
-    background-color: var(--color-roxo);
-    box-shadow: var(--color-preto);
-}
-
-ul {
-    flex-direction: row;
-    /* flex-wrap: wrap; */
-
-}
-
-.cardsUnitarios {
-    background-color: var(--color-roxo);
-    margin: 1rem;
-    border: 3px solid #252525;
-    border-radius: 20px;
-    padding: 5px;
-    text-align: right;
-    display: grid; 
-
-    flex-direction: column;
-} 
-
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+  color: #fefefe;
+  text-align: center;
+  background-color: #0e0613;
 }
 
 :root {
-  --color-amarelo: FFCE22;
-  --color-azul: 054A91;
+  --color-preto: #0e0613;
+  --color-lilas: #762697;
+  --color-roxo: #8775c3;
+  --color-cyan: #1098ad;
+  --stroke: #343a40;
 }
-header  {
+
+#main-banner {
+  height: 500px;
+  background: url("./imagens/header.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 4rem;
+}
+
+#main-banner-titulo {
+  width: 80%;
+  z-index: 10;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10em;
+  padding-bottom: 15em;
+  background-color: transparent;
+}
+
+h1 {
+  font-size: 90px;
+  font-family: "Poppins";
+  letter-spacing: 0.3rem;
+  background-color: transparent;
+}
+
+.subtitulo {
+  font-size: 20px;
+  background-color: transparent;
+}
+
+.painelInteratividade {
+  margin-bottom: 2rem;
+}
+
+select,
+#botaoLimpar {
+  color: #ffffff;
+  border-radius: 20px;
+  padding: 10px;
+  line-height: 100%;
+  margin: 10px;
+  margin-bottom: 1rem;
+  text-align: center;
+  background-color: var(--color-cyan);
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 2px 2px var(--color-preto);
+}
+
+select,
+#botaoLimpar:hover {
+  background-color: var(--color-roxo);
+  box-shadow: var(--color-preto);
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 2rem;
+}
+
+.cardsUnitarios {
+  width: 20%;
+  margin: 1.8rem;
+  border-radius: 50px;
+  border: 1px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(45deg, #8775c3, #1098ad, #8775c3);
+  padding: 2rem;
+  display: grid;
+}
+
+img {
   width: 100%;
-  background-color: var(--color-amarelo);
+  padding: 1.5rem;
 }
 
-footer {
-  background-color: aqua;
+h2 {
+  font-size: 20px;
+  font-family: "Poppins";
+  text-align: center;
 }
 
+p {
+  font-size: 12px;
+  font-family: "Poppins";
+  font-weight: 300;
+  line-height: 1.2rem;
+}
+
+hr {
+  margin-top: 3rem;
+  border-color: #0d0612;
+  opacity: 40%;
+}
+
+.footer-p {
+  padding: 2rem 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--color-cyan);
+}
