--- a/src/style.css
+++ b/src/style.css
@@ -76,7 +76,7 @@ select,
 ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 0 2rem;
 }
 
